--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-autocomplete-input": "^4.2.0",
+    "react-native-dropdown-autocomplete": "^1.0.18",
+    "react-native-dropdown-autocomplete-textinput": "^1.0.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.7.1",
