--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-autocomplete-input": "^4.2.0",
+    "react-native-circle-checkbox": "^0.1.6",
     "react-native-dropdown-autocomplete": "^1.0.18",
     "react-native-dropdown-autocomplete-textinput": "^1.0.1",
     "react-native-gesture-handler": "^1.6.1",
